crates/plotnik-lib/tests/02-parser/recovery_validation/field_name_pascal_case.txt
(call Name: (a))
==== diagnostics ====
error: field names must be snake_case
 --> query.ptk:1:7
  |
1 | (call Name: (a))
  |       ^^^^
  |
help: use `name`
  |
1 - (call Name: (a))
1 + (call name: (a))
  |
help: fields come from the grammar and are snake_case
